2013-05-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	- 内容の更新時にもフィルタを適用するように修正
	- フィルタの文字列検索をcase insentiveに変更

2013-05-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- 小ウインドウがすべて自動で閉じられるように修正

	* src/qt4/action_sequence_selector.cpp:
	- アイテム選択時の自動スクロールを追加

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- 親ウインドウを閉じた時に小ウインドウも自動で閉じられるようにした
	- 表示メッセージ調整
	- ウインドウサイズ調整

	* src/model/action_sequence_log_parser.cpp:
	- 行動列のデバッグ出力フォーマット変更に対応

2013-05-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- ActionSequenceSelectorをQDialogの派生クラスとして実装しなおし
	- ActionSequenceSelectorが閉じられた時に行動列の選択をクリアするイベントハンドラを追加

	* src/model/options.cpp:
	* src/model/options.h:
	* src/qt4/draw_config.cpp:
	* src/qt4/draw_config.h:
	* src/qt4/score_board_painter.cpp:
	- スコアボードの高さをフォントの大きさに応じて自動調整するように変更

	* src/qt4/action_sequence_selector.cpp:
	- ダイアログのコンストラクタ内でウィジェットとレイアウトの生成処理を行うように整理

	* src/model/action_sequence_log_parser.cpp:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- ActionSequenceSelector上でダブルクリックした行動列に対して，
	FieldEvaluatorの詳細ログを別ダイアログで表示する機能を追加

2013-05-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	- 表示データ更新時に評価値のカラム幅を内容に合わせて変更するようにした

	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	- 行動列の長さでフィルタする機能を追加

	* src/model/debug_log_data.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/debug_message_window.cpp:
	- rcsc::Logger::PLANを末尾へ移動
	- 行動列の探索結果はPLANで記録されているものとして扱うように変更

2013-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp: