@@ -1,3 +1,8 @@
+2013-05-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/qt4/evaluator_control_panel.cpp:
+	- 使用しないウィジェットを表示しないようにした
+
 2013-05-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/action_sequence_selector.cpp:
